--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-test-package",
+  "name": "daniel-test-package-1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
